kube/rsvp-db-clusterip-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  labels:
    app: rsvpdb
  namespace: rsvpapp
spec:
  type: ClusterIP
  ports:
  - port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    appdb: rsvpdb
