kube/rsvp-mongo-endpoint.yaml
kind: Endpoints
apiVersion: v1
metadata:
  name: mongodb
  namespace: rsvpapp
subsets:
  - addresses:
    - ip: 10.220.26.45
    ports:
      - port: 27017
