kube/rsvp-mongo-external-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  labels:
    app: rsvp-app
  namespace: rsvpapp
spec:
  type: ClusterIP
  ports:
  - port: 27017
    targetPort: 27017
