kube/rsvp-mongo-externalName.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  labels:
    app: rsvp-app
  namespace: rsvpapp
spec:
  type: ExternalName
  externalName: mongodb.shared.lab.pksdemo.net
